# page-forge

./: .gitignore  .prettierignore  AGENTS.md  README.md  appcast.xml  eslint.config.js  install.sh  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  pyproject.toml  raycast-env.d.ts  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml
.pi-subagents/artifacts/: fb60cfae_scout_0_input.md  fb60cfae_scout_0_meta.json  fb60cfae_scout_0_output.md  fb60cfae_scout_0_transcript.jsonl
.pi/prompts/: speckit.taskstoissues.md
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: codex.manifest.json  pi.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
PageForge/: Info.plist
PageForge.xcodeproj/: project.pbxproj
PageForge/App/: AppState.swift  MainWorkflowView.swift  PageForgeApp.swift  RootNavigationView.swift
PageForge/DesignSystem/: Color+Theme.swift  ThemeManager.swift  View+Theme.swift
PageForgeTests/Domain/: CalibreManagementServiceTests.swift  ConfigSecretTests.swift  DocumentDeliveryWorkflowTests.swift  DocumentIntakeServiceTests.swift  DocumentPreparationServiceTests.swift  DocumentWorkflowModelsTests.swift  OperationJobCoordinatorTests.swift  PreparedOutputExporterTests.swift  ReadinessServiceTests.swift  RepairServiceTests.swift
PageForgeTests/Features/: SettingsViewModelTests.swift  (+3 more)
docs/: desktop-migration.md
legacy/: README.md
legacy/python-tui-cli/: pyproject.toml
legacy/python-tui-cli/src/page_forge/: calibre.py  config.py  epub_repair.py  errors.py  models.py  readiness.py  tui_app.py
legacy/python-tui-cli/tests/: test_config.py  test_conversion.py  test_epub_repair.py  test_platform.py  test_readiness.py
src/: inspect-epub.tsx  prepare-epub-for-kindle.tsx  send-book-to-kindle.tsx  send-epub-to-kindle.tsx
tests/: test_calibre.py  test_config.py  test_conversion.py  test_metadata.py  test_platform.py  test_updater.py
(+256 files in other folders)
